# xycli

./: .gitignore  Cargo.toml  DEVELOPMENT_REPORT.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
crates/xycli-cli/: Cargo.toml
crates/xycli-cli/src/: main.rs  renderer.rs
crates/xycli-cli/tests/: cli.rs
crates/xycli-core/: Cargo.toml
crates/xycli-core/src/: agent.rs  config.rs  error.rs  events.rs  lib.rs
crates/xycli-core/src/provider/: anthropic.rs  deepseek.rs  factory.rs  mod.rs  retry.rs  stream.rs
crates/xycli-core/tests/: provider_http.rs
docs/: ARCHITECTURE.md  DESIGN.md  NEXT_PHASE_DESIGN.md  PERMISSION_GUARD_DESIGN.md  PRD.md  REMEDIATION_PLAN.md  RUST_MIGRATION.md  TASKS.md
src/: cli.ts
src/core/: agent-loop.test.ts  agent-loop.ts  errors.ts  index.ts  prompts.ts  types.ts
src/providers/: anthropic.test.ts  anthropic.ts  deepseek.ts  index.ts  types.ts
src/session/: index.ts  json-store.test.ts  json-store.ts  types.ts
src/tools/: builtins.ts  file-read.ts  file-write.ts  index.ts  registry.ts  terminal-exec.ts  tools.test.ts  types.ts
test/e2e/: m1-cli.test.ts
test/fixtures/: mock-anthropic.ts
