[workspace]
members = ["crates/xycli-core", "crates/xycli-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/HEXXX09/xycli"
rust-version = "1.85"

[workspace.dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.41", features = ["derive"] }
futures-util = "0.3.33"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
hex = "0.4.3"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "stream"] }
rpassword = "7.5.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.15"
toml = "1.1.3"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
zeroize = "1.9.0"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
