[package]
name = "xycli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "终端原生的 AI 编程助手"

[[bin]]
name = "xycli"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
rpassword.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
xycli-core = { path = "../xycli-core" }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
